[package]
name = "shelly-save-to-db"
version = "0.1.0"
edition = "2021"
author = "Alexander Pietsch <alexpietsch@proton.me>"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls", "mysql", "chrono" ] }
chrono = "0.4.31"
